--- a/textView/Info.plist
+++ b/textView/Info.plist
@@ -24,6 +24,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Take a picture for processing</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Choose a picture for processing</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
